-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: to-qif
version: 0.1
license: BSD3
license-file: LICENSE
copyright: (c) Ingolf Wagner
author: Ingolf Wagner
maintainer: Ingolf Wagner <palipalo9@googlemail.com>
bug-reports: mailto:palipalo9@gmail.com
stability: unstable
homepage: http://www.haskell.org/
synopsis: A small program that will read csv files and create qif files
category: Console, Text
cabal-version: >= 1.6
build-type: Simple

Description:
  This is an implementation of the classic "Hello World" program in
  Haskell, as an example of how to create a minimal Haskell
  application using Cabal and Hackage.  Please submit any suggestions and
  improvements.

source-repository head
  type:     darcs
  location: http://darcs.haskell.org/hello/

flag threaded
  default: False

executable to-qif
  hs-source-dirs: src
  main-is: hello.hs
  build-depends: base >= 4.2 && < 5

  if flag(threaded)
     ghc-options: -threaded
