name: to-qif
version: 0.1
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Ingolf Wagner
maintainer: Ingolf Wagner <palipalo9@googlemail.com>
stability: unstable
homepage: http://www.haskell.org/
bug-reports: mailto:palipalo9@gmail.com
synopsis: A small program that will read csv files and create qif files
description: This is an implementation of the classic "Hello World" program in
             Haskell, as an example of how to create a minimal Haskell
             application using Cabal and Hackage.  Please submit any suggestions and
             improvements.
category: Console, Text
author: Ingolf Wagner
data-dir: ""

source-repository head
    type: darcs
    location: http://darcs.haskell.org/hello/

flag threaded
    Default: False

executable to-qif
    build-depends: base >=4.2 && <5, csv >=0.1.1

    if flag(threaded)
        buildable: True
        ghc-options: -threaded
    main-is: hello.hs
    buildable: True
    hs-source-dirs: src,main
    other-modules: Main Qifer
    default-language:    Haskell2010

test-suite tester
    build-depends: base >=4.2 && <5, csv >=0.1.1, Cabal >= 1.9.2
    main-is: Tester.hs
    buildable: True
    hs-source-dirs: src,test
    ghc-options: -Wall
    default-extensions:  OverloadedStrings
    type: exitcode-stdio-1.0
    build-depends:       base >=4.2 && <5, csv >=0.1.1, Cabal >= 1.9.2,
                          hspec >= 1.8
    default-language:    Haskell2010
